fix(progress): make progress visible in high contrast (#3896)
* Use system colors for background of track and bar elements

--- a/src/components/calcite-progress/calcite-progress.scss
+++ b/src/components/calcite-progress/calcite-progress.scss
@@ -17,6 +17,15 @@
   @apply bg-brand z-0;
 }
 
+@media (forced-colors: active) {
+  .track {
+    background-color: highlightText;
+  }
+  .bar {
+    background-color: linkText;
+  }
+}
+
 .indeterminate {
   @apply w-1/5;
   animation: looping-progress-bar-ani 2200ms linear infinite;
